@startuml

title Tutoring Management System — Domain Model

left to right direction

hide circle
hide empty members

<style>
root {
  BackgroundColor white
  FontName Arial
}

classDiagram {
  LineColor #333333
  FontColor #111111
}

class {
  BackgroundColor #F8F9FB
  BorderColor #333333
  FontColor #111111
}

package {
  BackgroundColor #FFFFFF
  BorderColor #666666
  FontColor #111111
}

legend {
  BackgroundColor #FFFFFF
  BorderColor #666666
  FontColor #111111
}
</style>

legend right
  |= Stereotype |= Meaning |
  | <<Aggregate Root>> | Entry point and consistency boundary |
  | <<Entity>> | Object with identity inside an aggregate |
  | <<Value Object>> | Immutable value described by its attributes |

  Identifiers and foreign keys are intentionally omitted.

  Associations between separate aggregates connect aggregate roots only.
  Composition represents ownership inside an aggregate.
endlegend


' ============================================================
' IDENTITY AND ACCESS
' ============================================================

package "Identity and Access" {

  class UserAccount <<Aggregate Root>> {
    email: EmailAddress
    roles: Set<UserRole>
    status: AccountStatus
    profile: PersonalProfile
    passwordHash: PasswordHash
  }

  class PersonalProfile <<Value Object>> {
    userName: String
    firstName: Optional<String>
    lastName: Optional<String>
    phoneNumber: PhoneNumber
  }

  class EmailAddress <<Value Object>> {
    value: String
  }

  class PasswordHash <<Value Object>> {
    value: String
  }
  
  class PhoneNumber <<Value Object>> {
    value: String
  }

  UserAccount "1" *-- "1" PasswordHash

  UserAccount "1" *-- "1" PersonalProfile
  UserAccount "1" *-- "1" EmailAddress

  PersonalProfile "1" *-- "0..1" PhoneNumber
}


' ============================================================
' TUTORING COOPERATION
' ============================================================

package "Tutoring Cooperation" {

  class Tutor <<Aggregate Root>> {
    status: TutorStatus
  }

  class Student <<Aggregate Root>> {
    displayName: StudentDisplayName
    status: StudentStatus
  }

  class StudentDisplayName <<Value Object>> {
    value: String
  }

  class TutoringAgreement <<Aggregate Root>> {
    subject: Subject
    hourlyRate: Optional<HourlyRate>
    contactEmail: Optional<EmailAddress>
    contactPhoneNumber: Optional<PhoneNumber>
    status: AgreementStatus
    privateNotes: String
  }

  class StudentInvitation <<Aggregate Root>> {
    recipient: EmailAddress
    status: InvitationStatus
    validUntil: DateTime
  }

  class Subject <<Value Object>> {
    name: String
  }

  class HourlyRate <<Value Object>> {
    pricePerHour: Money
  }

  Tutor "0..1" --> "1" UserAccount : account
  Student "0..1" --> "0..1" UserAccount : account

  TutoringAgreement "0..*" --> "1" Tutor : tutor
  TutoringAgreement "0..*" --> "1" Student : student

  StudentInvitation "0..*" --> "1" Tutor : sent by
  StudentInvitation ..> UserAccount : acceptance requires account
  StudentInvitation ..> Student : acceptance requires student
  StudentInvitation ..> TutoringAgreement : acceptance starts agreement

  TutoringAgreement "1" *-- "1" Subject
  TutoringAgreement "1" *-- "0..1" HourlyRate
  Student "1" *-- "1" StudentDisplayName
}


' ============================================================
' LESSON PLANNING
' ============================================================
package "Lesson Planning" {

  class Lesson <<Aggregate Root>> {
    timeSlot: TimeSlot
    status: LessonStatus
    cancellationParty: LessonCancellationParty
    cancellationReason: CancellationReason
    cancelledAt: DateTime
  }

  class LessonNote <<Entity>> {
    topic: String
    coveredTopics: String
    studentProgress: String
  }

  class TimeSlot <<Value Object>> {
    startsAt: DateTime
    endsAt: DateTime
  }

  class CancellationReason <<Value Object>> {
    text: String
  }

  enum LessonCancellationParty {
    Tutor
    Student
  }
  

  class LessonSeries <<Aggregate Root>> {
    dayOfWeek: DayOfWeek
    startsAt: TimeOnly
    duration: TimeSpan
    startsOn: DateOnly
    endsOn: Optional<DateOnly>
  }

  LessonSeries "0..*" --> "1" TutoringAgreement : scheduled within
  Lesson "0..*" --> "0..1" LessonSeries : occurrence of
  Lesson "0..*" --> "1" TutoringAgreement : scheduled within

  Lesson "1" *-- "1" TimeSlot
  Lesson "1" *-- "0..1" CancellationReason
  Lesson "1" *-- "0..1" LessonNote

  Lesson "0..*" --> "0..1" UserAccount : cancellation recorded by
  Lesson --> LessonCancellationParty : cancelled by
}


' ============================================================
' BILLING
' ============================================================

package "Billing" {

  class BillingAccount <<Aggregate Root>> {
    status: BillingAccountStatus
  }

  class LessonCharge <<Entity>> {
    amount: Money
    chargedAt: DateTime
    status: ChargeStatus
    description: String
  }

  class Payment <<Entity>> {
    amount: Money
    paidAt: DateTime
    reference: PaymentReference
  }

  class Money <<Value Object>> {
    amount: Decimal
    currency: Currency
  }

  class Currency <<Value Object>> {
    code: String
  }

  class PaymentReference <<Value Object>> {
    value: String
  }

  BillingAccount "1" --> "1" TutoringAgreement : 

  BillingAccount "1" *-- "0..*" LessonCharge
  BillingAccount "1" *-- "0..*" Payment

  LessonCharge "1" --> "1" Lesson : references by LessonId
  LessonCharge "1" *-- "1" Money
  Payment "1" *-- "1" Money
  Payment "1" *-- "0..1" PaymentReference

  Money "1" *-- "1" Currency
  HourlyRate "1" *-- "1" Money
}


' ============================================================
' LEARNING MATERIALS
' ============================================================

package "Learning Materials" {

  class LearningMaterial <<Aggregate Root>> {
    title: String
    file: FileDescriptor
    status: MaterialStatus
  }

  class MaterialAssignment <<Aggregate Root>> {
    status: AssignmentStatus
    assignedAt: DateTime
  }

  class FileDescriptor <<Value Object>> {
    fileName: String
    contentType: String
    size: FileSize
    storageLocation: StorageLocation
  }

  class FileSize <<Value Object>> {
    bytes: Long
  }

  class StorageLocation <<Value Object>> {
    value: String
  }

  LearningMaterial "0..*" --> "1" Tutor : owned by

  MaterialAssignment "0..*" --> "1" LearningMaterial : assigned material
  MaterialAssignment "0..*" --> "1" TutoringAgreement : shared in agreement
  MaterialAssignment "0..*" --> "0..1" Lesson : optionally attached to

  LearningMaterial "1" *-- "1" FileDescriptor

  FileDescriptor "1" *-- "1" FileSize
  FileDescriptor "1" *-- "1" StorageLocation
}

@enduml
